--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,9 +19,9 @@ dependencies:
   firebase_storage: ^10.2.8
   firebase_analytics: ^9.1.1
   google_sign_in: ^5.2.4
-  rxdart: ^0.27.3
-  pinput: ^2.0.2
-  flutter_svg: ^1.0.3
+  flutter_staggered_grid_view: ^0.6.1
+  transparent_image: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
