--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,10 @@ dependencies:
   firebase_auth: ^3.3.8
   firebase_storage: ^10.2.8
   firebase_analytics: ^9.1.1
-  google_sign_in: ^5.2.4
   flutter_staggered_grid_view: ^0.6.1
   transparent_image: ^2.0.0
+  google_sign_in: ^5.3.0
+  flutter_secure_storage: ^5.0.2
 
 
 dev_dependencies:
