--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,11 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/icons/
   fonts:
     - family: Pacifico
       fonts:
         - asset: fonts/Pacifico-Regular.ttf
-
+    - family: Josefin
+      fonts:
+        - asset: fonts/JosefinSans-Regular.ttf
